--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <body>
         <h2>Styles</h2>
+        <p>CSS</p>
         <div class="redBlock">
             <p>Abstract one</p>
             <p>Abstract two</p>
