--- a/about.html
+++ b/about.html
@@ -4,13 +4,13 @@
         <meta charset="UTF-8">
         <title>Test Page</title>
         <meta name="author" content="A.D.Nikolaev">
-        <meta name="description" content="This is a test page">
+        <meta name="description" content="About">
         <link rel="stylesheet" type="text/css" href="CSS/style.css"/>
     </head>
 
     <body>
         <h1>Hello my friends</h1>
         <h2>Hello my describers</h2>
-        <a href="./about.html">About</a>
+        <a href="./index.html">Home</a>
     </body>
 </html>
