Test Page 2.0.0.4 (two anim notes)

--- a/index.html
+++ b/index.html
@@ -1,16 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Test Page</title>
-        <meta name="author" content="A.D.Nikolaev">
-        <meta name="description" content="This is a test page">
-        <link rel="stylesheet" type="text/css" href="CSS/style.css"/>
-    </head>
-
-    <body>
-        <h1>Hello my friends</h1>
-        <h2>Hello my describers</h2>
-        <a href="./about.html">About</a>
-    </body>
+	<head>
+		<meta charset="UTF-8">
+		<title>Test Page</title>
+		<meta name="author" content="A.D.Nikolaev">
+		<meta name="description" content="This is a test page">
+		<link rel="stylesheet" type="text/css" href="CSS/style.css" />
+	</head>
+	
+	<body>
+		<div class="container">
+			<div class="card">
+				<div class="face face1">
+					<div class="content">
+						<h3>Animals</h3>
+					</div>
+				</div>
+				
+				<div class="face face2">
+					<div class="content">
+						<p>
+							Animals are multicellular, eukaryotic organisms in the biological kingdom Animalia.
+							With few exceptions, animals consume organic material, breathe oxygen, are able to move,
+							can reproduce sexually, and go through an ontogenetic stage in which their body consists
+							of a hollow sphere of cells, the blastula, during embryonic development.
+						</p>
+					</div>
+				</div>
+			</div>
+			
+			<div class="card">
+				<div class="face face1">
+					<div class="content">
+						<h3>Transport</h3>
+					</div>
+				</div>
+				
+				<div class="face face2">
+					<div class="content">
+						<p>
+							Means of transport are any of the different kinds of transport facilities used to carry people or cargo.
+							They may include vehicles, riding animals, and pack animals. Vehicles may include wagons,
+							automobiles, bicycles, buses, trains, trucks, helicopters, watercraft, spacecraft, and aircraft.
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
