Test Page 2.0.0.6 (flip object)

--- a/index.html
+++ b/index.html
@@ -12,31 +12,17 @@
 		
 		<div class="about_me">
 			<div class="card">
-				<div class="face top_face">
-					<p>About me</p>
+				<div class="container">
+					<div class="face top_face">
+						<img src="/content/Mounting%20view.jpg" alt="">
+					</div>
+					<div class="face bottom_face">
+						<p>Normafa Park. <br>
+						   Budapest, Jánoshegyi út,<br>
+						   1121</p>
+					</div>
 				</div>
-				<div class="face bottom_face">
-					<p>
-						Hi, my name is Aleksey.<br>
-						I'm engaged in photographs (digital and film),
-						videography and photo/video editing (DaVinci Resolve, Lightroom)
-					</p>
-				</div>
-			</div>
-		</div>
-		
-		<div class="experience">
-			<div class="card">
-				<div class="face top_face">
-					<p>Experience</p>
-				</div>
-				<div class="face bottom_face">
-					<p>
-						Hi, my name is Aleksey.<br>
-						I'm engaged in photographs (digital and film),
-						videography and photo/video editing (DaVinci Resolve, Lightroom)
-					</p>
-				</div>
+				<p>About Normafa Park, about my cat, about...</p>
 			</div>
 		</div>
 		
