Test Page 2.0.0.7 (two flip objects)

--- a/index.html
+++ b/index.html
@@ -10,19 +10,53 @@
 	
 	<body>
 		
-		<div class="about_me">
+		<div class="about_park">
 			<div class="card">
 				<div class="container">
 					<div class="face top_face">
 						<img src="/content/Mounting%20view.jpg" alt="">
 					</div>
 					<div class="face bottom_face">
-						<p>Normafa Park. <br>
-						   Budapest, Jánoshegyi út,<br>
-						   1121</p>
+						<p>Budapest, Normafa Park<br>Jánoshegyi út, 1121</p>
+						<div class="links">
+							<ul class="menu">
+								<li class="website"><a href="#"></a></li>
+								<li class="facebook"><a href="#"></a></li>
+								<li class="instagram"><a href="#"></a></li>
+							</ul>
+						</div>
 					</div>
 				</div>
-				<p>About Normafa Park, about my cat, about...</p>
+				<p>
+					Normafa is part of the Buda Hills area, on the Svábhegy
+				   (Schwab Hill), close to János-hegy (Janos Hill), the highest
+				   point of the city. It's known for its panoramic scenery and fresh air.
+				</p>
+			</div>
+		</div>
+		
+		<div class="about_village">
+			<div class="card">
+				<div class="container">
+					<div class="face top_face">
+						<img src="/content/Village.jpg" alt="">
+					</div>
+					<div class="face bottom_face">
+						<p>Hungarian: Szentendre<br>Fő tér 5, 2000</p>
+						<div class="links">
+							<ul class="menu">
+								<li class="website"><a href="#"></a></li>
+								<li class="facebook"><a href="#"></a></li>
+								<li class="instagram"><a href="#"></a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<p>
+					Szentendre is a Hungarian town on the Danube River,
+				   north of the capital, Budapest. It’s known for its
+				   baroque architecture, churches, colorful houses, cobbled streets.
+				</p>
 			</div>
 		</div>
 		
