Test Page 2.0.0.7 (two flip objects)

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 					<div class="face top_face">
 						<img src="/content/Mounting%20view.jpg" alt="">
 					</div>
-					<div class="face bottom_face">
+					<div class="face back_face">
 						<p>Budapest, Normafa Park<br>Jánoshegyi út, 1121</p>
 						<div class="links">
 							<ul class="menu">
@@ -41,7 +41,7 @@
 					<div class="face top_face">
 						<img src="/content/Village.jpg" alt="">
 					</div>
-					<div class="face bottom_face">
+					<div class="face back_face">
 						<p>Hungarian: Szentendre<br>Fő tér 5, 2000</p>
 						<div class="links">
 							<ul class="menu">
