Test Page 3.0.0.2 (CV As Project)

--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>CV As Project</title>
+		<title>CV As A Project</title>
 		<meta name="author" content="A.D.Nikolaev">
 		<meta name="description" content="CV As Project">
 		<link rel="stylesheet" type="text/css" href="CSS/style.css" />
 	</head>
 	
-	<body>
+	<body onload="document.body.style.opacity='1'">
 		
 		<section id="top_area" class="top-area" style="background-image: url('/content/first_backplane.jpg')">
 			<div class="introduce_block">
-				<h1>CV As Project</h1>
+				<h1>CV As A Project</h1>
 				<p>
-					In this project, I will try to show you my web development skills and take more information about myself
+					In this project, I show you my web development skills and take more information about myself
 				</p>
 			</div>
 		</section>
@@ -25,7 +25,7 @@
 				
 				<div class="logo">
 					<a href="#top_area">
-						<img src="/content/icons8-app-32.png" alt="logo">
+						<img src="/content/logo32x96.png" alt="logo">
 					</a>
 				</div>
 				
