CV As Project 3.0.0.8 - Added contacts

--- a/about.html
+++ b/about.html
@@ -2,15 +2,16 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Test Page</title>
-        <meta name="author" content="A.D.Nikolaev">
-        <meta name="description" content="About">
-        <link rel="stylesheet" type="text/css" href="CSS/style.css"/>
+        <meta name="author" content="CEO_Eng">
+        <title>Cards</title>
     </head>
 
     <body>
-        <h1>Hello my friends</h1>
-        <h2>Hello my describers</h2>
-        <a href="./index.html">Home</a>
+        <div class="about">
+            <div class="card">
+                <div class="bottom_card"></div>
+                <div class="top_card"></div>
+            </div>
+        </div>
     </body>
 </html>
