CV As Project 3.0.1.2 - Deleted spaces

--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
 							
 							<div class="tooltip"><img src="./ICONS/Engineer.svg" alt="">
 								<p class="tooltip_text">
-									Fanuc and Sinumerik
+									NC code knowledge
 								</p>
 							</div>
 							
@@ -665,5 +665,3 @@
 	</footer>
 
 </html>
-
-
