CV As Project 3.1.0.1 - Edited descriptions

--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
 									<b><span class="skill_caption" style="color: #CB96F8">Visual Studio IDE</span></b>
 									I use this IDE always when I need to create
 									a new Windows app on C# or Visual Basic, or
-									for edit exists projects.
+									for edit exists projects
 								</p>
 							</div>
 							
