CV As Project 3.1.0.2 - Edited descriptions

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 							I was an engineer and worked in the field of device making that why
 							new technologies in technics and electronics it is always interesting for me.
 							I like to combine exists solutions and create my own solutions for many projects.
-							Now I learn development field to become a developer.
-							I am constantly educating myself and ready for new challenge
+							Now I'm learning development field to become a developer.
+							I'm constantly educating myself and ready for new challenges
 						</p>
 					</div>
 					
