--- a/index.html
+++ b/index.html
@@ -4,25 +4,24 @@
 	
 	<head>
 		<meta charset="UTF-8">
-		<title>Checker</title>
+		<title>Counter App</title>
 		<meta name="author" content="A.D.Nikolaev">
-		<meta name="description" content="Checker">
+		<meta name="description" content="Counter App">
 		<link rel="stylesheet" type="text/css" href="CSS/style.css">
 		<link rel="shortcut icon" href="./content/icons8-app-32.png" type="image/x-icon">
-		<script src="script.js"></script>
+		<script type="module" src="script.js"></script>
 	</head>
 	
 	<body onload="document.body.style.opacity='1'">
 	
-		<h1>Counter App</h1>
+		<h2>Counter App</h2>
 		
-		<p class="counter-preview">0</p>
-		<div class="buttons" id="allBtns">
-			<button class="decrement" id="decrement">Decrement</button>
-			<button class="reset" id="reset">Reset</button>
-			<button class="increment" id="increment">Increment</button>
+		<h2 id="counter-preview">0</h2>
+		<div id="allButtons">
+			<button id="decrement">Decrement</button>
+			<button id="reset">Reset</button>
+			<button id="increment">Increment</button>
 		</div>
-	
 	</body>
 
 </html>
