--- a/index.html
+++ b/index.html
@@ -4,24 +4,21 @@
 	
 	<head>
 		<meta charset="UTF-8">
-		<title>Counter App</title>
-		<meta name="author" content="A.D.Nikolaev">
-		<meta name="description" content="Counter App">
+		<title>App</title>
 		<link rel="stylesheet" type="text/css" href="CSS/style.css">
-		<link rel="shortcut icon" href="./content/icons8-app-32.png" type="image/x-icon">
-		<script type="module" src="script.js"></script>
 	</head>
 	
-	<body onload="document.body.style.opacity='1'">
-	
-		<h2>Counter App</h2>
-		
-		<h2 id="counter-preview">0</h2>
-		<div id="allButtons">
-			<button id="decrement">Decrement</button>
-			<button id="reset">Reset</button>
-			<button id="increment">Increment</button>
-		</div>
+	<body>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
 	</body>
 
 </html>
